--- a/Portfolio Optimization.ipynb
+++ b/Portfolio Optimization.ipynb
@@ -5,8 +5,7 @@
    "id": "e8781608",
    "metadata": {},
    "source": [
-    "### NAME:- RISHI KUMAR  - CWID:20015656\n",
-    "### NAME:- MARIA SAYEED IMAM - CWID:20011063"
+    "### NAME:- RISHI KUMAR  \n"
    ]
   },
   {
